added statistic
